# Zmena

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  CONTRIBUTING.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yaml  coverage.yaml  validation.yaml
application/: __init__.py  engine.py  pipeline.py  scenario.py  scenario_catalog.py
core/: component.py  engine.py  filter.py  main.py  view.py
domain/: __init__.py
domain/heuristics/: __init__.py  compatibility.py  name.py  position.py  signature.py
domain/model/: __init__.py  hunk.py  lexeme.py  span.py
domain/rules/: __init__.py  base.py  delete.py  insert.py  name.py  overflow.py  position.py  signature.py
domain/services/: __init__.py  component.py  decision.py  filter.py  matcher.py  sample.py
heuristics/: compatibility.py  name.py  position.py  signature.py
infrastructure/cli/: main.py  test_load.py
infrastructure/view/: view.py
model/: hunk.py
model/brick/: base.py  left.py  right.py  stub.py
modules/: brick.py  component.py  constant.py  decision.py  engine.py  heuristic.py  hunk.py  index.py  lexeme.py  link.py  main.py  matcher.py  rule.py  sample.py  scored_link.py  span.py  view.py  visualizer.py
modules/heuristic/: __init__.py  compatibility.py  name.py  position.py  signature.py
modules/model/: __init__.py  lexeme.py
modules/rule/: __init__.py  delete.py  insert.py  name.py  overflow.py  position.py  rule.py  signature.py
rules/: __init__.py  base.py  delete.py  insert.py  name.py  overflow.py  position.py  signature.py
scenarios/SCE_014_alter_constraint_null/: after.sql
scenarios/SCE_051_alter_column_then_add_another_after/: before.sql
scenarios/sce_011_add_column_not_null/: after.sql  expected.txt
scenarios/sce_012_add_column_null/: after.sql  expected.txt
scenarios/sce_013_alter_constraint_not_null/: after.sql  expected.txt
scenarios/sce_014_alter_constraint_null/: expected.txt
scenarios/sce_015_change_data_type/: after.sql  expected.txt
scenarios/sce_016_drop_column/: after.sql  before.sql  expected.txt
scenarios/sce_017_move_column/: after.sql  expected.txt  meta.json
scenarios/sce_051_alter_column_then_add_another_after/: after.sql  expected.txt
scenarios/sce_051_alter_column_then_add_another_before/: after.sql  expected.txt
scenarios/sce_701_swap_columns/: after.sql  (+1 more)
(+219 files in other folders)
