[project]
name = "zmena"
version = "0.1.0"
description = "Zmena is a git-native tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.5",
]
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "EXE",
    "F",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TC",
    "TD",
    "TID",
    "UP",
    "W",
]
