[project]
name = "zmena"
version = "0.1.0"
description = "Zmena is a git-native tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.5",
]
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
    "W",
]
ignore = [
    "PLR0913"
]
