[project]
name = "zmena"
version = "0.1.0"
description = "Generate SQL migrations from DDL changes between Git commits"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.4",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
    "W",
]
ignore = [
    "COM812",
    "PLR0913",
]
